had to add labels, and fix contrast problems

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*  colors */
 :root{
-    --pastelPink: #f8c4cc;
+    --pastelPink: rgb(247, 196, 204);
     --gold: #ffcf28;
-    --gGreen: #57886C;
-    --duskGreen: #466060;
-    --darkGreen: #0E0F19;
+    --gGreen: rgb(87, 136, 108);
+    --duskGreen: rgb(70, 96, 96);
+    --darkGreen: #0e0f19;
     --smoothFont: 'Josefin Sans', sans-serif;
     --sun_gifpos: 200px;
 }
@@ -73,11 +73,7 @@ html:-webkit-scrollbar{
 }
 
 .text-color-white{
-    color: white;
-}
-
-.text-invert{
-    color: var(--darkGreen);
+    color: #0b0b0b;
 }
 
 .text-bold{
@@ -208,7 +204,11 @@ html:-webkit-scrollbar{
     margin: auto;
     height: 50%;
     left: 50%;
-    color: white;
+    font-size: 1.3em;
+    background-color: #0e0f19;
+    padding: .5em;
+    border: 0px solid transparent;
+    border-radius: 10px;
     text-align: center;
 }
 
@@ -282,14 +282,15 @@ html:-webkit-scrollbar{
 }
 
 a:link, a:hover, a:visited, a:active{
-    color: var(--darkGreen);
+    color: white;
 }
-nav{
-    height: 30px;
+nav ul li{
+    padding-left: 12px;
+    padding-right: 12px;
 }
 nav ul li a{
     transition: .5s;
-    color: white;
+    color: #0b0b0b;
     transform: translateY(0px);
 }
 
@@ -665,7 +666,7 @@ form textarea{
     text-decoration: none;
     width: 100%;
     height: 100%;
-    color: white;
+    color: #ffffff;
 }
 #sun{
     position: absolute;
